--- a/eyeos-frontend/package.json
+++ b/eyeos-frontend/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-history": "^0.18.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
