--- a/eyeos-frontend/package.json
+++ b/eyeos-frontend/package.json
@@ -19,7 +19,9 @@
     "electron": "^8.2.0",
     "electron-builder": "^22.4.1",
     "electron-is-dev": "^1.1.0",
+    "electron-reload": "^1.5.0",
     "node-sass": "^4.13.1",
+    "python-shell": "^1.0.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-history": "^0.18.2",
@@ -28,6 +30,7 @@
     "react-scripts": "3.4.1",
     "tailwindcss": "^1.2.0",
     "typescript": "^3.7.5",
+    "unstated": "^2.1.1",
     "wait-on": "^4.0.1"
   },
   "scripts": {
